# polybot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  supabase_schema.sql
.devcontainer/: devcontainer.json
_bmad-output/: polybot-tech-spec.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
data/insights/: insights.json
data/simulations/: SIM-20260128-180301-24053e.json  SIM-20260128-180516-a2a3ec.json
src/polybot/: __init__.py
src/polybot/brain/: __init__.py  ev_calculator.py  indicators.py  models.py
src/polybot/config/: __init__.py  presets.py  settings.py
src/polybot/data/: __init__.py  binance.py  crypto_data.py  polymarket.py
src/polybot/storage/: __init__.py  knowledge.py  paper_trading.py  simulations.py  strategies.py  supabase_store.py
src/polybot/tutor/: __init__.py  explainer.py  prompts.py
src/polybot/ui/: app.py
src/polybot/ui/components/: tooltips.py
src/polybot/ui/pages/: 1_Configure.py  2_Simulate.py  3_Results.py  4_Knowledge.py  5_Leaderboard.py  6_Paper_Trading_Live.py
tests/: test_ev_calculator.py  test_indicators.py
